# eatwhat

./: .dockerignore  .gitignore  AGENTS.md  README.md  README.zh-CN.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: Dockerfile  __init__.py  bootstrap.py  main.py  pyproject.toml
app/api/core/: settings.py
app/api/dependencies/: auth.py
app/api/domain/: __init__.py
app/api/integrations/: wechat.py
app/api/repositories/: __init__.py  auth.py  candidate_pool.py  cuisine_pool.py  database.py  history_log.py  sqlite_store.py
app/api/routes/: __init__.py  auth.py  candidates.py  cuisines.py  decisions.py  health.py  history.py
app/api/schemas/: auth.py  candidate.py  cuisine.py  decision.py  health.py  history.py
app/api/scripts/: __init__.py  migrate.py
app/api/services/: auth.py  candidate_pool.py  cuisine_catalog.py  cuisine_pool.py  decision.py  health.py  history.py
app/miniapp/: .eslintrc.cjs  package.json  pnpm-lock.yaml  project.config.json  project.private.config.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
app/shared/: cuisine-candidates.json  decision-taxonomy.json
artifacts/: README.md
configs/: agent-harness.yaml
docs/: index.md  manifest.yaml
docs/adr/: README.md
docs/archive/: README.md
docs/worklog/: 2026-03-29-meal-decision-discovery.md  README.md
scripts/: _common.sh  check  dev  lint  migrate  replay  setup  test  typecheck
skills/: README.md
tests/: auth_helpers.py  test_auth.py  test_candidates.py  test_cuisines.py  test_decisions.py  test_health.py  test_history.py  test_settings.py
(+82 files in other folders)
